Bug 424744 - xdg-desktop-portal-kde used with flatpak version of OBS Studio crashes on neon unstable
Summary: xdg-desktop-portal-kde used with flatpak version of OBS Studio crashes on neo...
Status: RESOLVED FIXED
Alias: None
Product: xdg-desktop-portal-kde
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Jan Grulich
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-07-28 11:08 UTC by Patrick Silva
Modified: 2020-07-28 18:10 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-07-28 11:08:42 UTC
SUMMARY
I'm using OBS Studio installed via flatpak/flathub. When I add Desktop/screencast (Wayland / X11) to Sources, select laptop screen and click on "Share" button, Plasma notifies about xdg-desktop-portal-kde crash.

EXPECTED RESULT
no crash

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.73.0
Qt Version: 5.14.2

Application: xdg-desktop-portal-kde (xdg-desktop-portal-kde), signal: Segmentation fault
Content of s_kcrashErrorMessage: [Current thread is 1 (Thread 0x7f58a496e800 (LWP 10942))]
[KCrash Handler]
#6  Screencasting::createOutputStream (this=0x0, output=output@entry=0x5643bc44f160, mode=Screencasting::Hidden) at ./src/screencasting.cpp:94
#7  0x00005643bb1a1b9b in WaylandIntegration::WaylandIntegrationPrivate::startStreamingOutput (this=this@entry=0x5643bb3e2480 <(anonymous namespace)::Q_QGS_globalWaylandIntegration::innerFunction()::holder>, outputName=<optimized out>, mode=mode@entry=Screencasting::Hidden) at ./src/waylandintegration.cpp:247
#8  0x00005643bb1a1c9b in WaylandIntegration::startStreamingOutput (outputName=<optimized out>, mode=mode@entry=Screencasting::Hidden) at ./src/waylandintegration.cpp:85
#9  0x00005643bb1a7b41 in ScreenCastPortal::Start (this=<optimized out>, handle=..., session_handle=..., app_id=..., parent_window=..., options=..., results=...) at ./src/screencast.cpp:140
#10 0x00005643bb1b4d98 in ScreenCastPortal::qt_static_metacall (_o=_o@entry=0x5643bc436a70, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=2, _a=_a@entry=0x7ffc9d102300) at ./obj-x86_64-linux-gnu/src/xdg-desktop-portal-kde_autogen/EWIEGA46WW/moc_screencast.cpp:131
#11 0x00005643bb1b5e85 in ScreenCastPortal::qt_metacall (this=0x5643bc436a70, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0x7ffc9d102300) at ./obj-x86_64-linux-gnu/src/xdg-desktop-portal-kde_autogen/EWIEGA46WW/moc_screencast.cpp:211
#12 0x00007f58a02595b8 in QDBusConnectionPrivate::deliverCall (this=this@entry=0x7f588c005240, object=object@entry=0x5643bc436a70, msg=..., metaTypes=..., slotIdx=<optimized out>) at qdbusintegrator.cpp:1001
#13 0x00007f58a025e4b0 in QDBusConnectionPrivate::activateCall (this=this@entry=0x7f588c005240, object=0x5643bc436a70, flags=flags@entry=273, msg=...) at qdbusintegrator.cpp:904
#14 0x00007f58a025ee2c in QDBusConnectionPrivate::activateCall (msg=..., flags=273, object=<optimized out>, this=0x7f588c005240) at qdbusintegrator.cpp:853
#15 QDBusConnectionPrivate::activateObject (this=0x7f588c005240, node=..., msg=..., pathStartPos=<optimized out>) at qdbusintegrator.cpp:1486
#16 0x00007f58a02616f8 in QDBusActivateObjectEvent::placeMetaCall (this=0x5643bc493f70) at qdbusintegrator.cpp:1606
#17 0x00007f589faf457b in QObject::event (this=0x5643bc3fe870, e=0x5643bc493f70) at kernel/qobject.cpp:1339
#18 0x00007f58a24a99ac in QApplicationPrivate::notify_helper (this=this@entry=0x5643bc3c62b0, receiver=receiver@entry=0x5643bc3fe870, e=e@entry=0x5643bc493f70) at kernel/qapplication.cpp:3685
#19 0x00007f58a24b0bb0 in QApplication::notify (this=0x7ffc9d102b40, receiver=0x5643bc3fe870, e=0x5643bc493f70) at kernel/qapplication.cpp:3431
#20 0x00007f589fac14a8 in QCoreApplication::notifyInternal2 (receiver=0x5643bc3fe870, event=0x5643bc493f70) at kernel/qcoreapplication.cpp:1075
#21 0x00007f589fac167e in QCoreApplication::sendEvent (receiver=receiver@entry=0x5643bc3fe870, event=event@entry=0x5643bc493f70) at kernel/qcoreapplication.cpp:1470
#22 0x00007f589fac4121 in QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x5643bc3c4150) at kernel/qcoreapplication.cpp:1815
#23 0x00007f589fac46b8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1674
#24 0x00007f589fb21103 in postEventSourceDispatch (s=0x5643bc3f2b70) at kernel/qeventdispatcher_glib.cpp:277
#25 0x00007f58983ba417 in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#26 0x00007f58983ba650 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#27 0x00007f58983ba6dc in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#28 0x00007f589fb207ac in QEventDispatcherGlib::processEvents (this=0x5643bc3ff9d0, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#29 0x00007f589fabfd2a in QEventLoop::exec (this=this@entry=0x7ffc9d102ac0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:225
#30 0x00007f589fac94a0 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1383
#31 0x00005643bb15487d in main (argc=<optimized out>, argv=<optimized out>) at ./src/xdg-desktop-portal-kde.cpp:50
Comment 1 Bug Janitor Service 2020-07-28 17:04:53 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/xdg-desktop-portal-kde/-/merge_requests/11
Comment 2 Aleix Pol 2020-07-28 18:10:59 UTC
Git commit 8970eaf20c8022d7fe21fa0985ae4c477303ba6e by Aleix Pol.
Committed on 28/07/2020 at 17:03.
Pushed by grulich into branch 'master'.

screencasting: error out when kwin isn't providing the zkde_screencast_unstable_v1

M  +5    -0    src/remotedesktop.cpp
M  +5    -0    src/screencast.cpp
M  +10   -0    src/waylandintegration.cpp
M  +1    -0    src/waylandintegration.h
M  +1    -0    src/waylandintegration_p.h

https://invent.kde.org/plasma/xdg-desktop-portal-kde/commit/8970eaf20c8022d7fe21fa0985ae4c477303ba6e