screencasting: error out when kwin isn't providing the zkde_screencast_unstable_v1

BUG: 424744