src/waylandintegration_p.h
@@ -82,6 +82,7 @@ public:
     void authenticate();
 
     bool isStreamingEnabled() const;
+    bool isStreamingAvailable() const;
 
     void startStreamingInput();
 
